# personaops-kit

./: IMPLEMENTATION_LOG.md  MANIFEST.in  Makefile  PRD.md  README.md  SDD.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: incident.yml  story.yml
.github/workflows/: ci.yml  publish.yml
evals/: promptfooconfig.yaml
flows/: default_flow.yaml
implementation/: context_compiler.py  control_plane.py  discord_adapter.py  models.py  outbox_worker.py  policy.py  repository_postgres.py  sender.py  settings.py  state_machine.py  store.py  store_postgres.py  temporal_worker.py  temporal_workflow.py  trace.py
implementation/sql/: 001_init.sql
implementation/tests/: test_flow.py  test_observability.py  test_policy_regression.py  test_postgres_integration.py
runbooks/: sprint-01-02-backlog.md  traceability-matrix.md
src/personaops_kit/: cli.py  scaffold.py
src/personaops_kit/templates/personaops-starter/: .gitignore  Makefile  PRD.md  README.md  SDD.md  docker-compose.postgres.yml  requirements.txt
src/personaops_kit/templates/personaops-starter/evals/: promptfooconfig.yaml
src/personaops_kit/templates/personaops-starter/implementation/: control_plane.py  repository_postgres.py  sender.py  settings.py  store.py  store_factory.py  trace.py
src/personaops_kit/templates/personaops-starter/policies/: approval_rules.yaml  rbac.yaml
src/personaops_kit/templates/personaops-starter/runbooks/: package-release.md  traceability-matrix.md
src/personaops_kit/templates/personaops-starter/schemas/: event.schema.json  (+1 more)
tests_kit/: test_scaffold.py
(+10 files in other folders)
